--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,9 @@ nltk==3.8.1
 scikit-learn==1.3.1
 scipy==1.11.3
 jupytext==1.15.2
-flask==3.0.0
-flasgger==0.9.7.1
+
+fastapi==0.103.2
+python-multipart==0.0.6
+uvicorn==0.23.2
+pydantic==2.4.2
+aiofiles==23.2.1
